/***************************************/
 Version 1.0.0
/***************************************/
- Das Löschen von Journal-Einträgen wie Bewegeungsmeldungen, Gefechtsmeldungen und
  Systemmeldungen wurde optimiert. Es sollte nun um ein Vielfaches schneller gehen.
  Maximal können 200 selektiert werden um diese zu löschen. Sonst muss man weniger
  selektieren. Oder auf die neue Funktion "Alle löschen" klicken.
- Foto-Import Fehler elminiert. Falls für eine bestehende Person kein Foto vorhanden
  war konnte der Import nicht duchgeführt werden. Funktioniert nun.
- #72 Unnötige Systemmeldungen eliminiert.
- Fehler beim Importieren von PISA-Daten behoben, falls ein neuer Ausweis erstellt 
  werden soll und es noch keinen gab, kamm es zum Fehler.
- #36 Info-Dialog: In der Titelleiste wurde der Buildtimestamp entfernt. Dafür
   ist ein Info Dialog unter Start/Info verfügbar. Dieser zeigt die Version von
   Sentinel, die eingesetzte Java-Plattform, das darunterliegende Betriebssystem
   und das Datenverzeichnis. Alle diese Informationen werden vom Client und
   vom Server dargestellt.
- Java 8 Support.
- Alle Tabellen können nun gedruckt werden.
- Alle Abhängigkeiten auf den aktuellsten Stand gebracht.

/***************************************/
 Version 0.8.3
/***************************************/
#34 Personendaten Import: Slider Speed im Step Modifikationen erhöht. Der
   Scroll war langsam und unbrauchbar.
#35 Personendaten Import: Nach dem Import erscheint eine Dialogsmeldung. Diese 
   Meldung erscheint nun mit dem korrekten Icon. Auch die Fehlermeldung.
#51 PrintJobs: Es wurden bei den Listen überall Headers hinzugefügt. Im Header 
    ist der Inhalt definiert (bspw. Name der Einheit), Seitenzahl und Datum. 
#55 PrintJobs: Die Liste ist nun nach Datum sortiert (neustes zuerst) und wenn man 
   einen druckt wird die Liste gleich aktualisiert.
#48 Ausweise: Falls Person in der Archiv Einheit war und nun einer gültigen Einheit